--- a/example_project/blog/templates/blog/post.html
+++ b/example_project/blog/templates/blog/post.html
@@ -26,23 +26,48 @@
       <dd>{{ hitcount.ajax_url }}</dd>
       <dt>The unique PK is:</dt>
       <dd>{{ hitcount.pk }}</dd>
+      <dt>Hit counted?</dt>
+      <dd id="hit-counted"></dd>
+      <dt>Hit response:</dt>
+      <dd id="hit-response"></dd>
     </dl>
 
-    <p> <br />
-
-
-
-
-    </p>
-    <p> </p>
 
   </div>
 </div>
 {%endblock%}
 
+{% comment %}
+If you do not wish to perform any additional JavaScript actions after POST,
+you can use this template tag to insert all the JavaScript you need, as in:
+
+{% insert_hit_count_js for post%}
+
+Or you can use with 'debug' for some output:
+
+{% insert_hit_count_js for post debug %}
+
+The code below is used to update the page view so we can test it with selenium.
+{% endcomment %}
+
+{% block inline_javascript %}
+
+{% load staticfiles %}
+<script src="{% static 'hitcount/jquery.postcsrf.js' %}"></script>
+{% get_hit_count_js_variables for post as hitcount %}
+<script type="text/javascript">
+jQuery(document).ready(function($) {
+  $.postCSRF("{{ hitcount.ajax_url }}", { hitcountPK : "{{ hitcount.pk }}" })
+    .done(function(data){
+      $('<i />').text(data[0]).attr('id','hit-counted-value').appendTo('#hit-counted');
+      // $('#hit-counted').text(data[0]);
+      $('#hit-response').text(data[1]);
+  }).fail(function(data){
+      console.log('POST failed');
+      console.log(data);
+  });
+});
+</script>
 
 
-
-{% block hitcount_javascript %}
-{% insert_hit_count_js_variables for post %}
 {% endblock %}
