--- a/example_project/blog/templates/blog/index.html
+++ b/example_project/blog/templates/blog/index.html
@@ -4,13 +4,25 @@
 
 <div class="jumbotron">
 <h1>django-hitcount</h1>
-<p>Choose a post to trigger a hit</p>
+<p>Welcome to the django-hitcount example project.  Three different views are demonstrated:
+<dl class="dl-horizontal">
+    <dt>ajax</dt><dd> for a jQuery based implementation using the hitcount template tags</dd>
+    <dt>detail</dt><dd> for a generic detail view that injects the hitcount into the context</dd>
+    <dt>detail-with-count</dt><dd> for a second generic detail view that also process/counts the request as a hit or not</dd>
+</dl></p>
+<p>Please post any questions or issues on GitHub.  Enjoy!</p>
 {% if post_list %}
-    <ul>
-    {% for post in post_list %}
-        <li><a href="/{{ post.id }}/">{{ post.title }}</a></li>
-    {% endfor %}
-    </ul>
+<ul>
+{% for posturl in post_views %}
+<li>{{posturl}}
+<ul>
+{% for post in post_list %}
+<li><a href="{% url posturl post.pk %}">{{ post.title }}</a></li>
+{% endfor %}
+</ul>
+</li>
+{% endfor %}
+</ul>
 {% else %}
     <p>No posts are available.</p>
 {% endif %}
